Correct indentation in hero section of index.html
Adjusted the indentation for better readability in the hero section.

--- a/index.html
+++ b/index.html
@@ -979,7 +979,7 @@
     <!-- Hero Section -->
     <section class="hero" id="home">
         <div class="container">
-            <div class="hero-content">
+            <div class="hero-content"><br><br><br>
                 <h1>Transforming Physics Education Through Practical Learning</h1>
                 <p>Physics Lab Instructor with 2+ years of experience in CBSE/PUC +2 Physics practicals, laboratory management, and student performance analysis at Sri Chaitanya Educational Institutions</p>
                 <div class="hero-buttons">
